alignment fix

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 1rem;
 }
 
 .role .name {
@@ -126,5 +127,10 @@ body {
 
   .image .avatar {
     width: auto;
+  }
+
+  .role {
+    flex-direction: row;
+    justify-content: flex-start;
   }
 }
